# mesh3d

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
docker/: Dockerfile.build  init.sql
include/mesh3d/: mesh3d.h  types.h
scripts/: import_viewshed.py  requirements.txt
shaders/: flat.frag  flat.vert  fresnel.comp  hud.frag  hud.vert  itm.comp  marker.frag  marker.vert  sphere.frag  terrain.frag  terrain.vert  viewshed.comp  viewshed_merge.comp
src/: app.cpp  app.h  main.cpp
src/analysis/: gpu_viewshed.cpp  gpu_viewshed.h  itm.cpp  itm.h  viewshed.cpp  viewshed.h
src/cabi/: cabi.cpp
src/camera/: camera.cpp  camera.h  input.cpp  input.h
src/db/: db.cpp  db.h  loader.cpp  loader.h  schema.h
src/render/: compute_shader.cpp  compute_shader.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/scene/: node_marker.cpp  node_marker.h  scene.cpp  scene.h  signal_sphere.cpp  signal_sphere.h  terrain.cpp  terrain.h
src/tile/: async_loader.cpp  async_loader.h  disk_cache.cpp  disk_cache.h  dsm_provider.cpp  dsm_provider.h  geotiff.cpp  geotiff.h  hgt_provider.cpp  hgt_provider.h  single_tile_provider.cpp  single_tile_provider.h  tile_cache.cpp  tile_cache.h  tile_coord.h  tile_data.h  tile_manager.cpp  tile_manager.h  tile_provider.cpp  tile_provider.h  tile_selector.cpp  tile_selector.h  tile_terrain_builder.cpp  tile_terrain_builder.h  url_tile_provider.cpp  url_tile_provider.h
src/ui/: hardware_profiles.h  hud.cpp  hud.h
src/util/: color.h  log.cpp  log.h  math_util.h
